--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__input-container">
               <fieldset class="popup__input-items">
-                <input type="text" value="Жак-Ив Кусто" class="popup__item popup__name-input"></input>
-                <input type="text" value="Исследователь океана" class="popup__item popup__job-input"></input>
+                <input type="text" value="Жак-Ив Кусто" class="popup__item popup__name-input">
+                <input type="text" value="Исследователь океана" class="popup__item popup__job-input">
               </fieldset>
               <button type="submit" class="popup__button">Сохранить</button>
             </form>
             
-          <img class="popup__close-icon" src="./images/Close Icon.svg" alt="закрыть попап">
+          <img class="popup__close-icon" src="./images/CloseIcon.svg" alt="закрыть попап">
           </div>
         </section>
 
