--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <header class="header">
           <img class="header__logo" src="./images/LogoHeader.svg" alt="Логотип Место">
+          <div class="header__underline"></div>
         </header>
 
         <main>
@@ -27,7 +28,7 @@
                 <p class="profile__job">Исследователь океана</p>
               </div>
             </div>
-            <button class="profile__add-button" type="button"></button>
+            <button class="profile__add-button" type="button" type="button"></button>
           </section>
           
           <section class="elements content__section">
@@ -77,7 +78,7 @@
             </ul>
           </section>
 
-        </main class="content">
+        </main>
 
         <footer class="footer">
           <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
@@ -86,14 +87,14 @@
         <section class="popup">
           <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form class="popup__input-container" name="popupForm">
+            <form class="popup__input-container" name="popup-form">
               <fieldset class="popup__input-items">
                 <input type="text" name="name" value=" " class="popup__item popup__item_name">
                 <input type="text" name="job" value=" " class="popup__item popup__item_job">
               </fieldset>
               <button type="submit" class="popup__button">Сохранить</button>
             </form>
-            <button class="popup__close-icon" type="reset"></button>
+            <button class="popup__close-icon" type="button"></button>
           </div>
         </section>
 
