--- a/index.html
+++ b/index.html
@@ -13,22 +13,21 @@
 
         <header class="header">
           <img class="header__logo" src="./images/LogoHeader.svg" alt="Логотип Место">
-          <div class="header__underline"></div>
         </header>
 
-        <main>
+        <main class="content">
           <section class="profile content__section">
             <div class="profile__content">
               <img class="profile__avatar" src="./images/Kusto.jpg" alt="Кусто">
               <div class="profile__info">
                 <div class="profile__group">
                   <h1 class="profile__name">Жак-Ив Кусто</h1>
-                  <button class="profile__edit-button"></button>
+                  <button class="profile__edit-button" type="button"></button>
                 </div>
                 <p class="profile__job">Исследователь океана</p>
               </div>
             </div>
-            <button class="profile__add-button" type="button" type="button"></button>
+            <button class="profile__add-button" type="button"></button>
           </section>
           
           <section class="elements content__section">
